--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,6 +4,9 @@ import Layout from "@layouts/Layout.astro";
 
 <Layout title="Welcome to Astro.">
   <main>
-    <ul><li><a href="/blogs">記事一覧ページ</a></li></ul>
+    <ul>
+      <li><a href="/blog">ブログ記事</a></li>
+      <li><a href="/news">ニュース記事</a></li>
+    </ul>
   </main>
 </Layout>
