feat: componentize article list

--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -1,22 +1,18 @@
 ---
 import Layout from "@layouts/Layout.astro";
+import PostList from "@components/parts/PostList.astro";
 
 //microCMS呼び出し
 import { getContents } from "@lib/microcms";
-const response = await getContents("blog");
+
+//data
+const type = "blog";
+const response = await getContents(type);
 ---
 
 <Layout title="My first blog with Astro">
   <main>
-    <h2>ブログ記事</h2>
-    <ul>
-      {
-        response.map((post) => (
-          <li>
-            <a href={`/blog/${post.id}`}>{post.title}</a>
-          </li>
-        ))
-      }
-    </ul>
+    <h2>ブログ記事一覧</h2>
+    <PostList posts={response} type={type} />
   </main>
 </Layout>
