--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,9 +4,10 @@ import Layout from "@layouts/Layout.astro";
 
 <Layout title="Welcome to Astro.">
   <main>
+    <h1>Sample Web Site <br />with Astro + microCMS</h1>
     <ul>
-      <li><a href="/blog">ブログ記事</a></li>
-      <li><a href="/news">ニュース記事</a></li>
+      <li><a href="/blog">ブログ</a></li>
+      <li><a href="/news">ニュース</a></li>
     </ul>
   </main>
 </Layout>
