feat: create ArticleTemplate component

--- a/src/pages/blog/[id].astro
+++ b/src/pages/blog/[id].astro
@@ -1,9 +1,8 @@
 ---
-import { type NewsPost } from "@types/type";
-import { getContents, getContentByID } from "@lib/microcms";
+import { getContents } from "@lib/microcms";
 
 import Layout from "@layouts/Layout.astro";
-import Article from "@components/parts/Article.astro";
+import ArticleTemplate from "@components/templates/ArticleTemplate.astro";
 
 // 詳細記事ページの全パスを取得
 export async function getStaticPaths() {
@@ -14,13 +13,8 @@ export async function getStaticPaths() {
     },
   }));
 }
-
-//記事の詳細情報を取得
-const { id } = Astro.params;
-const post = await getContentByID("blog", id as string);
 ---
 
 <Layout title="My first blog with Astro">
-  <!-- 型安全性のため、postの型を明示的に定義しておく -->
-  <Article type="blog" article={post as NewsPost} />
+  <ArticleTemplate type="blog" />
 </Layout>
