--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -1,18 +1,8 @@
 ---
 import Layout from "@layouts/Layout.astro";
-import PostList from "@components/parts/PostList.astro";
-
-//microCMS呼び出し
-import { getContents } from "@lib/microcms";
-
-//data
-const type = "blog";
-const response = await getContents(type);
+import ArticleListTemplate from "@components/templates/ArticleListTemplate.astro";
 ---
 
 <Layout title="My first blog with Astro">
-  <main>
-    <h2>ブログ記事一覧</h2>
-    <PostList posts={response} type={type} />
-  </main>
+  <ArticleListTemplate type="blog" />
 </Layout>
