--- a/src/components/templates/ArticleDetailTemplate.astro
+++ b/src/components/templates/ArticleDetailTemplate.astro
@@ -1,5 +1,5 @@
 ---
-import type { ContentType, NewsPost } from "src/type.ts";
+import type { ContentType, PostData } from "src/type.ts";
 import { getContentByID } from "@lib/microcms";
 
 import Article from "@components/blocks/Article.astro";
@@ -17,5 +17,5 @@ const post = await getContentByID(type, id as string);
 
 <div>
   <!-- 型安全性のため、postの型を明示的に定義しておく -->
-  <Article type={type} article={post as NewsPost} />
+  <Article type={type} article={post as PostData} />
 </div>
