--- a/src/components/blocks/Article.astro
+++ b/src/components/blocks/Article.astro
@@ -1,15 +1,11 @@
 ---
+import type { ContentType, PostData } from "src/type";
+
 import FormattedDate from "@components/parts/FormattedDate.astro";
 
-export interface ArticleProps {
-  title: string;
-  publishedAt: string;
-  content: string;
-}
-
 interface Props {
-  type: string;
-  article: ArticleProps;
+  type: ContentType["type"];
+  article: PostData;
 }
 
 const { type, article } = Astro.props;
