--- a/src/components/templates/ArticleListTemplate.astro
+++ b/src/components/templates/ArticleListTemplate.astro
@@ -18,4 +18,5 @@ const postResponse = await getContents(type);
 <div>
   <h2>{title}記事一覧</h2>
   <PostList type={type} posts={postResponse} />
+  <a href={`/`}>トップへ戻る</a>
 </div>
