feat: componentize year-month post list page template

--- a/src/components/templates/ArticleDetailTemplate.astro
+++ b/src/components/templates/ArticleDetailTemplate.astro
@@ -18,4 +18,5 @@ const post = await getContentByID(type, id as string);
 <div>
   <!-- 型安全性のため、postの型を明示的に定義しておく -->
   <Article type={type} article={post as PostData} />
+  <a href={`/${type}`}>一覧へ戻る</a>
 </div>
