--- a/src/pages/news/archive/[date].astro
+++ b/src/pages/news/archive/[date].astro
@@ -4,8 +4,9 @@ import { getContents } from "@lib/microcms";
 import { groupByYearMonth } from "@util/groupBy";
 
 import Layout from "@layouts/Layout.astro";
-import PostList from "@components/atoms/PostList.astro";
+import YearMonthListTemplate from "@components/templates/YearMonthListTemplate.astro";
 
+// routing
 export async function getStaticPaths() {
   const data = await getContents("news");
   const monthlyIndex = groupByYearMonth(data) as GroupedByDateContents;
@@ -18,13 +19,12 @@ export async function getStaticPaths() {
 
 const { date } = Astro.params;
 const { monthlyPosts } = Astro.props;
-
-// data
-const [year, month] = (date as string).split("_");
-const title = `${year}年${month}月の記事一覧`;
 ---
 
 <Layout title="My first blog with Astro">
-  <h2>{title}</h2>
-  <PostList type="news" posts={monthlyPosts} />
+  <YearMonthListTemplate
+    type="news"
+    date={date as string}
+    posts={monthlyPosts}
+  />
 </Layout>
