refactor: rename components/templates/ files

--- a/src/pages/blog/category/index.astro
+++ b/src/pages/blog/category/index.astro
@@ -1,8 +1,8 @@
 ---
 import Layout from "@layouts/Layout.astro";
-import CategoryListTemplate from "@components/templates/CategoryListTemplate.astro";
+import CategoryIndexPageTemplate from "@components/templates/CategoryIndexPageTemplate.astro";
 ---
 
 <Layout title="My first blog with Astro">
-  <CategoryListTemplate type="blog" />
+  <CategoryIndexPageTemplate type="blog" />
 </Layout>
