--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -1,8 +1,8 @@
 ---
 import Layout from "@layouts/Layout.astro";
-import ArticleListTemplate from "@components/templates/ArticleListTemplate.astro";
+import ArchivePageTemplate from "@components/templates/ArchivePageTemplate.astro";
 ---
 
 <Layout title="My first blog with Astro">
-  <ArticleListTemplate type="blog" />
+  <ArchivePageTemplate type="blog" />
 </Layout>
