--- a/src/pages/news/[id].astro
+++ b/src/pages/news/[id].astro
@@ -2,7 +2,7 @@
 import { getContents } from "@lib/microcms";
 
 import Layout from "@layouts/Layout.astro";
-import ArticleDetailTemplate from "@components/templates/ArticleDetailTemplate.astro";
+import PostDetailPageTemplate from "@components/templates/PostDetailPageTemplate.astro";
 
 // routing
 export async function getStaticPaths() {
@@ -16,5 +16,5 @@ export async function getStaticPaths() {
 ---
 
 <Layout title="My first blog with Astro">
-  <ArticleDetailTemplate type="news" />
+  <PostDetailPageTemplate type="news" />
 </Layout>
